syntax = 'proto3';

package RMSession;

service RMSessionBroker {

  rpc RequestRMSession (DHInfo) returns (AckMessage);

}

message DHInfo {
  string dh_id = 1;
  string dh_ip = 2;
  int32 dh_port = 3;
}

message AckMessage {
  string result = 1;
  string rm_session_id = 2;
}
