syntax = 'proto3';

package RMSessionSyncModule;

service RMSessionSync {
    rpc SessionComm (PublishRefMap) returns (ACKMessage);
}

message Void {}

message PublishRefMap {
    string transID = 1; // 트랜잭션 번호 {Timestamp} + {Datamap Filename} + 'SEND'
    string gitPatch = 2; // git_patch 파일
    string receiverId = 3;
    string operation = 4;
}

message ACKMessage {
    string transID = 1; // 트랜잭션 번호 {Timestamp} + {Datamap Filename} + 'ACK'
    int32 result = 2; // 0은 Success, 1은 Failed ... 다양한 오류 값   검출 가능하게 해 보기
}
